--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<groupId>com.github.dingey</groupId>
 	<artifactId>kit</artifactId>
-	<version>1.3</version>
+	<version>1.4-SNAPSHOT</version>
 	<url>https://github.com/dingey/kit</url>
 	<dependencies>
 		<dependency>
