--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.dingey</groupId>
 	<artifactId>kit</artifactId>
-	<version>1.4-SNAPSHOT</version>
+	<version>1.4</version>
 	<url>https://github.com/dingey/kit</url>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
